chore(apps/web): avoid showing invisible text

--- a/apps/web/styles/global.css
+++ b/apps/web/styles/global.css
@@ -3,6 +3,7 @@
   src: url('/font-family/HelveticaNeueLTStd-Lt.otf');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url('/font-family/HelveticaNeueLTStd-Roman.otf');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url('/font-family/HelveticaNeueLTStd-Md.otf');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
   src: url('/font-family/HelveticaNeueLTStd-Bd.otf');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 * {
